front/mikroagresszi-wiki/src/app/components/category/category.component.scss
@use '@angular/material' as mat;
@import '../../../styles';

.content {
  .category-card-content {
    display: flex;
    justify-content: space-between;
    min-height: 90vh;

    a {
      color: map-get(mat.$gray-palette, 500);
    }

    .category-card-side-content {
      background: map-get(mat.$gray-palette, 900);
      padding-top: 5rem;

      .back-to-home {
        margin-bottom: 1rem;

        a {
          font-size: .8rem;
        }
      }

      .category-card-title {
        color: map-get(mat.$gray-palette, 200);
        //font-family: Merriweather;
        font-size: 1.8rem;
        line-height: 2.5rem;
        margin-bottom: 2vh;
        text-transform: uppercase;
      }

      .category-card-description {
        color: map-get(mat.$gray-palette, 600);
        font-size: .8rem;
      }

      .add-new {
        .add-new-title {
          color: map-get(mat.$gray-palette, 200);
        }

        .add-new-description {
          color: map-get(mat.$gray-palette, 600);
          font-size: .8rem;
        }
      }
    }

    .category-card-result-set {
      display: flex;
      flex-flow: wrap;
      justify-content: flex-start;

      mat-card {
        border-radius: 0;
        background: map-get(mat.$gray-palette, 200);
        cursor: pointer;
        padding: 1.5rem;

        mat-card-title {
          //font-family: Merriweather;
          font-size: 1.4rem;
          font-weight: 400;
          line-height: 2rem;
        }

        mat-card-actions {
          position: absolute;
          bottom: 1rem;
          right: 1rem;
        }

        .separator {
          background: map-get(mat.$gray-palette, 400);
          height: 1px;
          margin-bottom: 1.5rem;
          width: 100%;
        }

        .card-content {
          color: map-get(mat.$gray-palette, 700);
          font-size: .8rem;
          overflow: hidden;
          position: relative;
          height: 5rem;

          .content-fade-out {
            background: -moz-linear-gradient(top, transparent 0%, map-get(mat.$gray-palette, 200) 100%); /* FF3.6-15 */
            background: -webkit-linear-gradient(top, transparent 0%, map-get(mat.$gray-palette, 200) 100%); /* Chrome10-25,Safari5.1-6 */
            background: linear-gradient(to bottom, transparent 0%, map-get(mat.$gray-palette, 200) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
            position: absolute;
            bottom: 0;
            height: 3rem;
            left: 0;
            right: 0;
          }
        }
      }
    }
  }
}

@media (min-width: 601px) {
  .category-card-content {
    flex-direction: row;

    .category-card-side-content {
      width: 18rem;

      .back-to-home {
        a {
          margin-left: 1.5rem;
        }
      }

      .category-card-title {
        margin-left: 1.5rem;
      }

      .category-card-description {
        margin: 0 1.5rem;
      }

      .add-new {
        margin: 2rem 1.5rem 0;
      }
    }
  }

  .category-card-result-set {
    margin: 1.5rem 0;
    width: calc(100% - 20rem);

    mat-card {
      height: 17rem;
      margin-bottom: 1rem;
      margin-right: 1rem;
      width: 14rem;
    }
  }
}

@media (max-width: 600px) {
  .category-card-content {
    flex-direction: column;

    .category-card-side-content {
      padding-bottom: 2rem;
      width: 100%;

      .back-to-home {
        a {
          margin-left: 2rem;
        }
      }

      .category-card-title {
        margin-left: 2rem;
      }

      .category-card-description {
        margin: 0 2rem;
      }

      .add-new {
        margin: 2rem 2rem 0;
      }
    }
  }

  .category-card-result-set {
    margin: 1.5rem 0 0;
    width: calc(100%);

    mat-card {
      height: 14rem;
      margin-bottom: 1rem;
      width: 100%;
    }
  }
}

